task3/k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task3-frontend
  namespace: task3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task3-frontend
  template:
    metadata:
      labels:
        app: task3-frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/moz1h1gh/task3-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: task3-frontend
  namespace: task3
spec:
  selector:
    app: task3-frontend
  ports:
    - port: 80
      targetPort: 80
